# jcodemunch-mcp

./: AGENT_HOOKS.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  QUICKSTART.md  README.md  SECURITY.md  USER_GUIDE.md  badge-kit.md  pyproject.toml  whatsnew.json
.github/workflows/: sign-release.yml
speedreview/: README.md  action.yml
src/jcodemunch_mcp/: config.py  credentials.py  server.py
src/jcodemunch_mcp/cli/: init.py
src/jcodemunch_mcp/storage/: sqlite_store.py
src/jcodemunch_mcp/summarizer/: batch_summarize.py
src/jcodemunch_mcp/tools/: check_edit_safe.py  get_file_content.py  get_symbol.py  index_folder.py
tests/: test_cache_mode.py  test_check_edit_safe.py  test_credentials.py  test_git_sha_verification.py  test_init_minimal.py  test_server.py  test_summarize_from_docstrings.py  test_tools.py
