[project]
name = "jcodemunch-mcp"
version = "1.108.23"
description = "Token-efficient MCP server for source code exploration via tree-sitter AST parsing"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "J. Gravelle", email = "j@gravelle.us" },
]
dependencies = [
    "mcp>=1.10.0,<2.0.0",
    "httpx>=0.27.0",
    "tree-sitter-language-pack>=0.7.0,<1.0.0",
    "pathspec>=0.12.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/jgravelle/jcodemunch-mcp"
Repository = "https://github.com/jgravelle/jcodemunch-mcp"
"Bug Tracker" = "https://github.com/jgravelle/jcodemunch-mcp/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
gemini = ["google-generativeai>=0.8.0"]
openai = ["openai>=1.0.0"]
minimax = ["openai>=1.0.0"]
zhipu = ["openai>=1.0.0"]
dbt = ["pyyaml>=6.0"]
http = ["uvicorn>=0.20.0", "starlette>=0.27.0", "anyio>=4.0.0"]
watch = ["watchfiles>=1.0.0"]
semantic = ["sentence-transformers>=2.2.0"]
local-embed = ["onnxruntime>=1.16.0"]
groq = ["openai>=1.0.0"]
groq-voice = ["openai>=1.0.0", "sounddevice>=0.4.6", "numpy>=1.24.0"]
groq-explain = ["openai>=1.0.0", "Pillow>=10.0.0"]
keyring = ["keyring>=24.0"]
bench = ["openai>=1.0.0", "anthropic>=0.40.0", "pyyaml>=6.0", "rich>=13.0", "jinja2>=3.1"]
all = ["anthropic>=0.40.0", "google-generativeai>=0.8.0", "openai>=1.0.0", "pyyaml>=6.0", "uvicorn>=0.20.0", "starlette>=0.27.0", "anyio>=4.0.0", "watchfiles>=1.0.0", "sentence-transformers>=2.2.0", "onnxruntime>=1.16.0", "sounddevice>=0.4.6", "numpy>=1.24.0", "Pillow>=10.0.0", "rich>=13.0", "jinja2>=3.1", "keyring>=24.0"]


[project.scripts]
jcodemunch-mcp = "jcodemunch_mcp.server:main"
gcm = "jcodemunch_mcp.groq.cli:main"
munch-bench = "munch_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jcodemunch_mcp", "munch-bench/munch_bench"]

[tool.hatch.build.targets.sdist]
exclude = [".claude/", "index.php"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "hypothesis>=6.0.0",
]
